# llm_rag_qa_documents

./: .gitignore  README.md  pyproject.toml  sample.env
llm_rag_qa_documents/: main.py
llm_rag_qa_documents/factory/: chroma_factory.py  logger_factory.py  watsonx_factory.py
llm_rag_qa_documents/helpers/: llm_helper.py
llm_rag_qa_documents/loaders/: load_and_process_document.py
llm_rag_qa_documents/prompts/: prompts_config.py
llm_rag_qa_documents/scripts/: load_docs_into_chroma.py
